<resources>
    <string name="app_name">Path Mobile</string>

    <string name="address_saved_toast">Path Wallet Address was saved</string>

    <string name="notification_title_running">Path Node is running…</string>
    <string name="notification_title_paused">Path Node is paused</string>
    <string name="notification_action_pause">Pause</string>
    <string name="notification_action_resume">Resume</string>

    <string name="blank_path_wallet_address_error">Wallet address cannot be blank</string>
    <string name="invalid_path_wallet_address_error">Invalid wallet address</string>

    <string name="bottom_bar_dashboard">Dashboard</string>
    <string name="bottom_bar_wallet">Wallet</string>
    <string name="setup_wallet_header">Setup wallet</string>
    <string name="wallet_header">Wallet</string>
    <string name="hint_wallet_address">WALLET ADDRESS</string> <!--uppercase problem workaround-->
    <string name="wallet_address_info">To earn path tokens we\nneed your wallet address</string>
    <string name="link_button_text">Link</string>
    <string name="button_update">Update</string>

    <!-- Splash -->
    <string name="node">node</string>
    <string name="by_path_network">by path network</string>

    <!-- Intro -->
    <string name="about">about</string>
    <string name="about_info_text">The Path Node app allows you to earn Tokens (PATH) while the app runs in the background. The app completes jobs and basic network monitoring tasks without impacting your device performance.</string>
    <string name="activate">activate</string>
    <string name="disclaimer">disclaimer</string>

    <!-- Dashboard -->
    <string name="operator_asn">operator asn:</string>
    <string name="autonomous_service">as:</string>
    <string name="location">location:</string>
    <string name="device_type">device type:</string>
    <string name="view_job_report">view job report</string>
    <string name="subnet_address">subnet address</string>
    <string name="n_a">n/a</string>
    <string name="no_data">no data</string>
    <string name="node_id">node id: %1$s</string>
    <string name="unconfirmed_node_id">unconfirmed</string>

    <!-- Job report -->
    <string name="job_report">Job report</string>
    <string name="job_types">Job types</string>
    <string name="http_checks">Http checks</string>
    <string name="tcp_checks">TCP checks</string>
    <string name="udp_checks">Http checks</string>
    <string name="traceroute_checks">Traceroute checks</string>
    <string name="dns_checks">DNS checks</string>
    <string name="unknown_checks">Unknown checks</string>
    <string name="other_checks">Other checks</string>
    <string name="average_latency">Average latency</string>
    <string name="latency_chart_value">%1$s ms</string>
    <string name="job_percentage">%.0f%%</string>

    <!-- Disclaimer -->
    <string name="disclaimer_header">Path Network, Inc.</string>
    <string name="disclaimer_body"><![CDATA[THIS DISCLAIMER MAY BE OUT OF DATE: PLEASE VISIT <a href="https://path.net/mobile-node-disclaimer">https://path.net/mobile-node-disclaimer</a> FOR MORE INFORMATION.<br/><br/>PATH NETWORK DOES NOT WARRANT: (1) THAT THE APPLICATION’S FUNCTIONS OR ANY SERVICES OR CONTENT WILL BE UNINTERRUPTED OR FREE OF ERRORS OR OMISSIONS; (2) THAT DEFECTS WILL BE CORRECTED; (3) THAT THE APPLICATION OR THE SERVERS HOSTING CONTENT ARE FREE OF VIRUSES OR OTHER HARMFUL CODE; OR (4) THAT THE APPLICATION OR SERVICES OR CONTENT AVAILABLE THROUGH THE APPLICATION WILL CONTINUE TO BE AVAILABLE. PATH NETWORK SHALL HAVE NO LIABILITY FOR ANY SUCH ISSUES. PATH NETWORK AND THE DISTRIBUTION CHANNEL DISCLAIM ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, WITHOUT LIMITATION, NONINFRINGEMENT, MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE, TITLE, QUALITY, AVAILABILITY AND AS TO SUBJECT MATTER OF CONTENT. THE APPLICATION, SERVICES AND CONTENT ARE PROVIDED "AS IS," "AS AVAILABLE," AND "WITH ALL FAULTS."<br/><br/>YOUR ACCESS TO AND USE OF THE APPLICATION IS AT YOUR RISK. IF YOU ARE DISSATISFIED WITH THE APPLICATION OR ANY OF THE SERVICES OR CONTENT AVAILABLE THROUGH THE APPLICATION, YOUR SOLE AND EXCLUSIVE REMEDY IS TO DISCONTINUE ACCESSING AND USING THE APPLICATION.]]></string>
    <string name="android">android</string>
    <string name="check_asn_complete">CHECKING ASN - COMPLETE</string>
    <string name="check_operator_asn_complete">CHECKING OPERATOR ASN - COMPLETE</string>
    <string name="location_country_origin">LOCATING COUNTRY ORIGIN</string>
    <string name="locating_node">Locating node…</string>

    <string name="label_app_version">App Version</string>
    <string name="label_os_version">OS Version</string>
    <string name="label_gl_version">GL Version</string>
    <string name="label_glsl_version">GLSL Version</string>
    <string name="label_version">Version: %1$s</string>
    <string name="status_connected">Connected</string>
    <string name="status_proxy">Connected via proxy</string>
    <string name="status_disconnected">Disconnected</string>
    <string name="label_paused">Paused</string>
    <string name="total_jobs_performed">Total jobs performed:</string>
    <string name="label_data_usage">Data usage</string>

    <string name="value_wifi_and_cellular">Cellular &amp; WiFi</string>
    <string name="value_wifi_only">WiFi Only</string>
</resources>
