<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    android:padding="@dimen/screen_root_layout_padding"
    >

    <TextView
        android:id="@+id/screenTitleTextView"
        style="@style/Text.Default.Header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/about"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <View
        android:id="@+id/headerDivider"
        style="@style/ScreenHeaderDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/screenTitleTextView"
        />

    <TextView
        android:id="@+id/pathDescriptionTextView"
        style="@style/IntroText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/padding_l"
        android:paddingTop="36dp"
        android:paddingEnd="@dimen/padding_l"
        android:paddingBottom="40dp"
        android:text="@string/about_info_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        />

    <Button
        android:id="@+id/activateButton"
        style="@style/PillButton"
        android:layout_marginTop="40dp"
        android:text="@string/activate"
        app:layout_constraintEnd_toEndOf="@id/pathDescriptionTextView"
        app:layout_constraintStart_toStartOf="@id/pathDescriptionTextView"
        app:layout_constraintTop_toBottomOf="@id/pathDescriptionTextView"
        />

    <TextView
        android:id="@+id/disclaimerButton"
        style="@style/Text.Default.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="52dp"
        android:stateListAnimator="@animator/button_state_list"
        android:text="@string/disclaimer"
        android:textColor="@color/sky"
        app:layout_constraintEnd_toEndOf="@id/pathDescriptionTextView"
        app:layout_constraintStart_toStartOf="@id/pathDescriptionTextView"
        app:layout_constraintTop_toBottomOf="@id/activateButton"
        />

</androidx.constraintlayout.widget.ConstraintLayout>