<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:gravity="center"
    android:orientation="vertical"
    >

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="2"
        />

    <TextView
        android:id="@+id/setupWalletTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/exo_bold"
        android:letterSpacing="0.13"
        android:lineSpacingExtra="10sp"
        android:text="@string/setup_wallet"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        />

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        />

    <View
        android:layout_width="50dp"
        android:layout_height="2dp"
        android:background="@color/dark_sky_blue"
        />

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/proxima_nova_regular"
        android:gravity="center_horizontal"
        android:letterSpacing="0.07"
        android:lineSpacingExtra="10sp"
        android:text="@string/wallet_address_info"
        android:textColor="@color/white"
        android:textSize="14sp"
        />

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/walletAddressInputLayout"
        style="@style/AppTheme.WalletAddressInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="22dp"
        android:paddingEnd="22dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/walletAddressInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/exo_regular"
            android:hint="@string/hint_wallet_address"
            android:imeOptions="actionDone"
            android:inputType="text|textNoSuggestions"
            android:maxLength="42"
            android:textCursorDrawable="@null"
            android:textSize="16sp"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        />

    <Button
        android:id="@+id/linkWalletButton"
        style="@style/PillButton"
        android:enabled="false"
        android:text="@string/link_button_text"
        />

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="2"
        />

</LinearLayout>